--- a/blog-item.html
+++ b/blog-item.html
@@ -16,50 +16,67 @@
 </head>
 
 <body class="!font-inter">
-    <section class="py-20">
+    <section class="py-8">
         <div class="view">
-            <div class="flex flex-col md:gap-y-8 gap-y-6">
-                <div class="flex flex-col gap-y-4">
-                    <h1 class="lg:text-4xl md:text-3xl text-2xl font-semibold leading-10 text-[#181A2A] ">
-                        The Ugly Truth About Car Service Prices – And How Petromin Express Is Changing the Game in India
-                    </h1>
+            <div class="flex flex-col md:gap-y-8 gap-y-[1.438rem]">
+                <div class="flex flex-col gap-[1.438rem] md:pb-0 ">
+                    <a href="#" class="flex gap-1.5 md:hidden block text-sm font-medium item-center">
+                        <div class="w-5 h-4">
+                            <img src="img/blog_arrow.webp" alt="arrow" class="w-full object-cover h-full">
+                        </div>
+                        Back to Blogs
+                    </a>
+                    <div class="flex flex-col gap-4">
+                        <h1
+                            class="lg:text-4xl md:text-3xl text-[1.75rem] font-semibold leading-tight md:leading-10 text-[#181A2A] ">
+                            The Ugly Truth About Car Service Prices – And How Petromin Express Is Changing the Game in
+                            India
+                        </h1>
 
-                    <p class="text-[#3B3C4A] font-normal leading-8 lg:text-xl md:text-lg text-sm">
-                        For years, car owners have been paying more than they should for routine maintenance and
-                        repairs.
-                        The hidden reality? Traditional car service centers inflate costs with unnecessary overheads,
-                        leaving customers frustrated and overcharged. At Petromin Express India, we’re here to change
-                        that.
-                    </p>
-                    <div class="flex items-center gap-4 text-sm text-gray-500 py-3">
-                        <div class="flex items-center gap-3">
-                            <div class="w-7 h-7 rounded-full  flex items-center justify-center text-gray-400">
-                                <img src="img/blog_person.webp" alt="person" class="w-full h-full">
-                            </div>
-                            <div class="text-sm font-normal text-[#696A75]">
-                                Author Name • August 20, 2025 • 2 Min Read
+                        <p class="text-[#3B3C4A] font-normal leading-6 md:leading-8 lg:text-xl md:text-lg text-base">
+                            For years, car owners have been paying more than they should for routine maintenance and
+                            repairs.
+                            The hidden reality? Traditional car service centers inflate costs with unnecessary
+                            overheads,
+                            leaving customers frustrated and overcharged. At Petromin Express India, we’re here to
+                            change
+                            that.
+                        </p>
+                        <div class="flex items-center gap-4 text-sm text-gray-500 md:pt-1">
+                            <div class="flex items-center gap-3">
+                                <div class="w-7 h-7 rounded-full  flex items-center justify-center text-gray-400">
+                                    <img src="img/blog_person.webp" alt="person" class="w-full h-full">
+                                </div>
+                                <div class="md:text-sm text-xs font-normal text-[#696A75]">
+                                    Author Name • August 20, 2025 • 2 Min Read
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-wrap gap-2.5 ">
-                        <button class="bg-[#FF8300] text-white text-sm font-semibold p-2.5">Car
+                    <div class="flex flex-wrap md:border-0 border-b border-[#E0E5EB] md:pb-0 pb-8 gap-2.5 pt-2.5 ">
+                        <button class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Car
                             Care & Maintenance</button>
-                        <button class="bg-[#FF8300] text-white text-sm font-semibold p-2.5">Service &
+                        <button
+                            class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Service
+                            &
                             Repairs</button>
-                        <button class="bg-[#FF8300] text-white text-sm font-semibold p-2.5">Industry
+                        <button
+                            class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Industry
                             Insights</button>
-                        <button class="bg-[#FF8300] text-white text-sm font-semibold p-2.5">Petromin
+                        <button
+                            class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Petromin
                             Stories</button>
                     </div>
                 </div>
-                <div class="h-[35.188rem] overflow-hidden">
+                <div class="md:h-[35.188rem] h-[18.75rem] overflow-hidden">
                     <img src="img/blog_banner.webp" alt="Petromin Express" class="w-full h-full object-cover">
                 </div>
-                <div class="space-y-4">
-                    <h2 class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
+                <div class="flex flex-col gap-y-4">
+                    <h2 class="text-[#181A2A] font-semibold lg:text-2xl md:leading-7 leading-[1.625rem] text-xl">
                         The Hidden Costs of Traditional Car Service
                     </h2>
-                    <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
+                    <p
+                        class="text-[#3B3C4A] lg:text-xl md:text-lg text-base font-normal leading-[1.563rem] md:leading-8">
                         Ever wondered why your car service bill seems to skyrocket? The traditional service model is
                         built
                         on costly layers of personnel—service advisors, floor supervisors, parts managers—each adding
@@ -70,11 +87,12 @@
                         performance or longevity.
                     </p>
                 </div>
-                <div class="space-y-4">
+                <div class="flex flex-col gap-y-4">
                     <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                         Petromin Express India: A Smarter, More Affordable Approach
                     </span>
-                    <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
+                    <p
+                        class="text-[#3B3C4A] lg:text-xl md:text-lg text-base font-normal leading-[1.563rem] md:leading-8">
                         At Petromin Express, we believe in cutting out the excess and focusing on what really
                         matters—delivering high-quality car service at a fair price to our customers. Our game-changing
                         Micro-Entrepreneurship Model eliminates unnecessary expenses while ensuring you get top-tier
@@ -83,13 +101,14 @@
                     </p>
                 </div>
                 <div class="w-full">
-                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                    <div class="grid md:grid-cols-2 gap-[1.438rem] md:gap-8 items-center">
                         <div class="relative overflow-hidden rounded-xl">
                             <img src="img/blog_men.webp" alt="blog img" title="blog img"
-                                class="w-full  h-full object-cover object-top md:h-[30rem]">
+                                class="w-full  h-full object-cover object-top h-[18.75rem] md:h-[30rem]">
                         </div>
-                        <div class="space-y-8">
-                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
+                        <div class="md:space-y-8 space-y-[0.938rem]">
+                            <p
+                                class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base leading-[1.563rem] md:leading-8">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
                                 pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu
                                 aenean
@@ -101,7 +120,8 @@
                                 sociosqu. Ad
                                 litora torquent per conubia nostra inceptos himenaeos.
                             </p>
-                            <p class="text-[#3B3C4A] font-normal text-xl leading-8">
+                            <p
+                                class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base leading-[1.563rem] md:leading-8">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
                                 pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu
                                 aenean
@@ -112,7 +132,8 @@
                                 malesuada lacinia integer nunc posuere.
 
                             </p>
-                            <p class="text-[#3B3C4A] font-normal text-xl leading-8">
+                            <p
+                                class="text-[#3B3C4A] font-normal md:block hidden lg:text-xl md:text-lg text-base text-sm leading-6 md:leading-8">
                                 Iaculis massa nisl malesuada lacinia integer nunc posuere. Iaculis massa nisl malesuada
                                 lacinia
                                 integer nunc posuere.
@@ -122,31 +143,31 @@
                     </div>
                 </div>
                 <div
-                    class="bg-[#E8E8EA] md:w-4/5 h-[7.5rem] flex flex-col mx-auto items-center gap-1 text-center justify-center">
+                    class="bg-[#E8E8EA] w-full md:w-4/5 h-[7.5rem] flex flex-col mx-auto items-center gap-1 text-center justify-center">
                     <p class="text-[#696A75] text-sm font-normal ">Advertisement</p>
-                    <p class="text-[#696A75] text-xl font-semibold ">You can place ads</p>
-                    <p class="text-[#696A75] text-lg font-normal ">980x120</p>
+                    <p class="text-[#696A75] md:text-xl text-lg font-semibold ">You can place ads</p>
+                    <p class="text-[#696A75] md:text-lg text-sm font-normal ">980x120</p>
                 </div>
-                <div class="space-y-8">
-                    <div class="space-y-4 ">
+                <div class="md:space-y-8 space-y-[1.438rem]">
+                    <div class="flex flex-col gap-y-4 ">
                         <span class="text-[#181A2A] font-semibold md:text-2xl text-xl">
-                            The Hidden Costs of Traditional Car Service
+                            Petromin Express India: A Smarter, More Affordable Approach
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
+                        <p
+                            class="text-[#3B3C4A] lg:text-xl md:text-lg text-base font-normal leading-[1.563rem] md:leading-8">
                             At Petromin Express, we believe in cutting out the excess and focusing on what really
                             matters—delivering high-quality car service at a fair price to our customers. Our
-                            game-changing
-                            Micro-Entrepreneurship Model eliminates unnecessary expenses while ensuring you get top-tier
-                            service
-                            from experienced professionals. Here’s what sets us apart:
+                            game-changing Micro-Entrepreneurship Model eliminates unnecessary expenses while ensuring
+                            you get top-tier service from experienced professionals. Here’s what sets us apart:
                         </p>
                     </div>
-                    <div class="grid md:grid-cols-2 gap-8 items-center">
-                        <div class="order-2 overflow-hidden rounded-xl">
+                    <div class="grid md:grid-cols-2 gap-[1.438rem] md:gap-8 items-center">
+                        <div class="md:order-2 order-1 overflow-hidden rounded-xl">
                             <img src="img/blog_men.webp" alt="menimg" class="w-full md:h-[30rem] h-full object-cover">
                         </div>
-                        <div class="space-y-8 order-1">
-                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
+                        <div class="md:space-y-8 space-y-4 order-2 md:order-1">
+                            <p
+                                class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base leading-[1.563rem] md:leading-8">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
                                 pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu
                                 aenean
@@ -158,7 +179,8 @@
                                 sociosqu. Ad
                                 litora torquent per conubia nostra inceptos himenaeos.
                             </p>
-                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
+                            <p
+                                class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base leading-[1.563rem] md:leading-8">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
                                 pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu
                                 aenean
@@ -169,7 +191,8 @@
                                 malesuada lacinia integer nunc posuere.
 
                             </p>
-                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
+                            <p
+                                class="text-[#3B3C4A] md:block hidden font-normal lg:text-xl md:text-lg text-base leading-[1.563rem] md:leading-8">
                                 Iaculis massa nisl malesuada lacinia integer nunc posuere. Iaculis massa nisl malesuada
                                 lacinia
                                 integer nunc posuere.
@@ -177,29 +200,29 @@
                             </p>
                         </div>
                     </div>
-                    <div class="space-y-4 ">
+                    <div class="flex flex-col gap-y-4 order-1 ">
                         <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                             Petromin Express India: A Smarter, More Affordable Approach
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
+                        <p
+                            class="text-[#3B3C4A] lg:text-xl md:text-lg text-base font-normal leading-[1.563rem] md:leading-8">
                             At Petromin Express, we believe in cutting out the excess and focusing on what really
                             matters—delivering high-quality car service at a fair price to our customers. Our
-                            game-changing
-                            Micro-Entrepreneurship Model eliminates unnecessary expenses while ensuring you get top-tier
-                            service
-                            from experienced professionals. Here’s what sets us apart:
+                            game-changing Micro-Entrepreneurship Model eliminates unnecessary expenses while ensuring
+                            you get top-tier service from experienced professionals. Here’s what sets us apart:
                         </p>
                     </div>
                     <div
                         class="bg-[#E8E8EA] h-[7.5rem] flex flex-col mx-auto items-center gap-1 text-center justify-center">
-                        <p class="text-[#696A75] text-xl font-semibold  ">You can place Banners</p>
-                        <p class="text-[#696A75] text-lg font-normal ">1512x120</p>
+                        <p class="text-[#696A75] md:text-xl text-lg font-semibold  ">You can place Banners</p>
+                        <p class="text-[#696A75] md:text-lg text-base font-normal ">1512x120</p>
                     </div>
-                    <div class="space-y-4 ">
+                    <div class="flex flex-col gap-y-4 ">
                         <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                             The Hidden Costs of Traditional Car Service
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
+                        <p
+                            class="text-[#3B3C4A] lg:text-xl md:text-lg text-base font-normal leading-[1.563rem] md:leading-8">
                             Ever wondered why your car service bill seems to skyrocket? The traditional service model is
                             built
                             on costly layers of personnel—service advisors, floor supervisors, parts managers—each
@@ -213,11 +236,12 @@
                             performance or longevity.
                         </p>
                     </div>
-                    <div class="space-y-4 ">
+                    <div class="flex flex-col gap-y-4 ">
                         <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                             Conclusion
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
+                        <p
+                            class="text-[#3B3C4A] lg:text-xl md:text-lg text-base font-normal leading-[1.563rem] md:leading-8">
                             At Petromin Express, we believe in cutting out the excess and focusing on what really
                             matters—delivering high-quality car service at a fair price to our customers. Our
                             game-changing
@@ -230,9 +254,6 @@
             </div>
         </div>
     </section>
-
-
-
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
