--- a/blog.html
+++ b/blog.html
@@ -16,11 +16,11 @@
 </head>
 
 <body class="!font-inter">
-    <section class="hero_section w-full relative md:h-dvh h-full z-10">
+    <section class="hero_section w-full relative h-dvh z-10">
         <div class="relative w-full h-full overflow-hidden">
             <div class="swiper blogHeroSlider relative">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
+                    <div class="swiper-slide md:h-full h-dvh">
                         <img fetchpriority="high" decoding="async" loading="eager" src="img/blog_hero_img.webp"
                             class="size-full object-cover" alt="Petromin Express, on the go."
                             title="Petromin Express, on the go.">
@@ -28,18 +28,18 @@
                         <div class="view w-full absolute lg:bottom-56 md:bottom-56 bottom-20 left-0">
                             <div class="flex flex-col md:gap-y-8 gap-y-6">
                                 <h1
-                                    class="block xl:text-5xl lg:text-4xl md:text-3xl text-lg text-balance text-white font-semibold !leading-tight drop-shadow-[0_4px_6px_rgba(0,0,0,0.7)]">
+                                    class="block xl:text-5xl lg:text-4xl text-3xl  text-balance text-white font-semibold !leading-tight md:drop-shadow-[0_4px_6px_rgba(0,0,0,0.7)]">
                                     The Ugly Truth About Car Service Prices – And How Petromin Express Is Changing the
                                     Game
                                     in India
                                 </h1>
 
-                                <ul class="flex flex-wrap md:gap-5 gap-4 items-center">
+                                <ul class="flex flex-wrap md:gap-5 gap-2 items-center">
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Car Care & Maintenance
                                             </span>
 
@@ -47,9 +47,9 @@
                                     </li>
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Service & Repairs
                                             </span>
 
@@ -57,9 +57,9 @@
                                     </li>
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Industry Insights
                                             </span>
 
@@ -67,9 +67,9 @@
                                     </li>
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Petromin Stories
                                             </span>
 
@@ -77,11 +77,11 @@
                                     </li>
                                 </ul>
 
-                                <div class="flex justify-end items-end w-full">
+                                <div class="flex md:justify-end md:items-end w-full">
                                     <button
-                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10 -skew-x-[18deg]">
+                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10 md:-skew-x-[18deg]">
                                         <span
-                                            class="flex items-center gap-1 text-base font-semibold skew-x-[18deg] text-white">Read
+                                            class="flex items-center gap-1 text-base font-semibold md:skew-x-[18deg] text-white">Read
                                             More
                                             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
                                                 viewBox="0 0 14 19" fill="none">
@@ -95,26 +95,26 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide md:h-full h-dvh">
                         <img fetchpriority="high" decoding="async" loading="eager" src="img/blog_hero_img.webp"
                             class="size-full object-cover" alt="Petromin Express, on the go."
                             title="Petromin Express, on the go.">
 
-                        <div class="view w-full absolute lg:bottom-56 md:bottom-44 bottom-20 left-0">
+                        <div class="view w-full absolute lg:bottom-56 md:bottom-56 bottom-20 left-0">
                             <div class="flex flex-col md:gap-y-8 gap-y-6">
                                 <h1
-                                    class="block xl:text-5xl lg:text-4xl md:text-3xl text-lg text-balance text-white font-semibold !leading-tight drop-shadow-[0_4px_6px_rgba(0,0,0,0.7)]">
+                                    class="block xl:text-5xl lg:text-4xl text-3xl  text-balance text-white font-semibold !leading-tight md:drop-shadow-[0_4px_6px_rgba(0,0,0,0.7)]">
                                     The Ugly Truth About Car Service Prices – And How Petromin Express Is Changing the
                                     Game
                                     in India
                                 </h1>
 
-                                <ul class="flex flex-wrap md:gap-5 gap-4 items-center">
+                                <ul class="flex flex-wrap md:gap-5 gap-2 items-center">
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Car Care & Maintenance
                                             </span>
 
@@ -122,9 +122,9 @@
                                     </li>
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Service & Repairs
                                             </span>
 
@@ -132,9 +132,9 @@
                                     </li>
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Industry Insights
                                             </span>
 
@@ -142,9 +142,9 @@
                                     </li>
                                     <li>
                                         <div
-                                            class="w-auto px-6 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-8 -skew-x-[50deg]">
+                                            class="w-auto md:px-6 px-4 flex space-x-3 items-center md:bg-gradient-to-r md:from-[#CB122D] md:via-[#980D22] md:to-[#CB122D] bg-[#FF8300] h-8 md:-skew-x-[50deg]">
                                             <span
-                                                class="flex items-center gap-2 md:text-base text-sm font-semibold skew-x-[50deg] text-white">
+                                                class="flex items-center gap-2 md:text-base text-sm font-semibold md:skew-x-[50deg] text-white">
                                                 Petromin Stories
                                             </span>
 
@@ -152,11 +152,11 @@
                                     </li>
                                 </ul>
 
-                                <div class="flex justify-end items-end w-full">
+                                <div class="flex md:justify-end md:items-end w-full">
                                     <button
-                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10 -skew-x-[18deg]">
+                                        class="px-3 flex space-x-3 items-center bg-gradient-to-r from-[#CB122D] via-[#980D22] to-[#CB122D] h-10 md:-skew-x-[18deg]">
                                         <span
-                                            class="flex items-center gap-1 text-base font-semibold skew-x-[18deg] text-white">Read
+                                            class="flex items-center gap-1 text-base font-semibold md:skew-x-[18deg] text-white">Read
                                             More
                                             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
                                                 viewBox="0 0 14 19" fill="none">
@@ -172,7 +172,8 @@
                     </div>
                 </div>
             </div>
-            <div class="view absolute h-full z-10 inset-0 w-full flex justify-center items-center translate-y-[-6rem]">
+            <div
+                class="view absolute h-full z-10 inset-0 w-full md:flex hidden justify-center items-center translate-y-[-6rem]">
                 <div class="flex w-full items-center justify-between duration-150 ease-in-out">
                     <div class="swiper-prev cursor-pointer">
                         <span>
@@ -199,10 +200,10 @@
         </div>
     </section>
 
-    <section class="relative pt-28 pb-16">
+    <section class="relative md:pt-28 pt-10 pb-10 md:pb-16">
         <div class="view flex flex-col gap-y-10">
             <div class="grid md:grid-cols-3 grid-cols-1 gap-6">
-                <div class="relative w-full flex flex-col gap-y-4 group">
+                <div class="relative w-full flex flex-col md:gap-y-4 gap-y-3 group">
                     <div class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
@@ -239,7 +240,7 @@ Car Care Industry">
                     </ul>
                     <a href="#" aria-label="" class="absolute inset-0"></a>
                 </div>
-                <div class="relative w-full flex flex-col gap-y-4 group">
+                <div class="relative w-full flex flex-col md:gap-y-4 gap-y-3 group">
                     <div class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
@@ -276,7 +277,7 @@ Car Care Industry">
                     </ul>
                     <a href="#" aria-label="" class="absolute inset-0"></a>
                 </div>
-                <div class="relative w-full flex flex-col gap-y-4 group">
+                <div class="relative w-full flex flex-col md:gap-y-4 gap-y-3 group">
                     <div class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
