--- a/login.html
+++ b/login.html
@@ -48,9 +48,13 @@
                                         fill="white" />
                                 </svg></span>
                         </button>
-                        <div class="mt-2 text-xs text-white font-normal text-center">
+                        <div class="mt-2 text-sm text-white font-normal text-center ">
                             Don't have an account? <a href="#" class="font-medium underline" aria-label="sign up">Sign
                                 up</a>
+                        </div>
+                        <div
+                            class="md:hidden block md:mt-2 md:mt-4 md:pt-0 pt-4 text-xs text-[#FFFFFFCC] font-normal text-center md:border-0 border-t border-[#FFFFFF33]">
+                            By continuing, you agree to our Terms of Service and Privacy Policy
                         </div>
                     </div>
                 </div>
