--- a/about-us.html
+++ b/about-us.html
@@ -333,7 +333,7 @@
                 <!-- missionVission  sec 3 start -->
                 <div class="w-full relative bg-gradient-to-r from-[#E5E5E5] to-[#fff] mb-[7.125rem] md:mb-[8.063rem]">
                     <div class="view pt-[4.188rem] md:pt-[4.438rem] pb-[3.813rem] md:pb-[5.688rem]">
-                        <div class="w-full flex justify-between flex-wrap md:gap-4 gap-y-8">
+                        <div class="w-full flex justify-between flex-wrap  gap-y-8">
                             <div class="lg:w-1/3 md:w-1/2 w-full">
                                 <div class="w-full relative flex flex-col gap-y-4 md:gap-y-8 md:p-5">
                                     <div class="pt-2.5 md:pb-0 pb-5">
@@ -935,7 +935,7 @@
                             for every journey
                         </h2>
                     </div>
-                    <div class="w-full md:py-28 py-36 bg-white overflow-hidden">
+                    <div class="w-full md:pt-36 md:pb-52 pt-40 pb-60 bg-white overflow-hidden">
 
                         <div id="wheelContainer"
                             class="relative sm:mx-auto sm:translate-x-0 translate-x-[-50%] sm:w-[22rem] md:w-[26rem] lg:w-[30rem] xl:w-[35rem] aspect-square flex items-center justify-center z-30">
@@ -1126,9 +1126,6 @@
                 </div>
 
                 <!-- circle hover sec 5 end -->
-
-
-                <section class="py-20"></section>
 
             </div>
         </div>
